# yalibnkf

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  package.json  yalibnkf.c  yalibnkf.h  yalibnkf_amalgamated.c
cmake/: CMakeLists.txt
test/: test_external.cpp  test_internal.cpp
tools/: amalgamator.py  convert_nkf_test.pl  pipe_test.pl
